--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.0.1",
+    "react-vertical-timeline-component": "^3.6.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
