--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.14",
     "@mui/material": "^5.15.14",
     "next": "14.1.4",
     "react": "^18",
@@ -20,6 +21,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
+    "daisyui": "^4.9.0",
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
     "postcss": "^8",
